<resources>
    <string name="app_name">DiveIn</string>
    <string name="login_logo">login_logo</string>
    <string name="divein_login_logo">divein_login_logo</string>
    <string name="barcode_login_logo">barcode_login_logo</string>
    <string name="en">EN</string>
    <string name="username">Username</string>
    <string name="welcome_screen">welcome_screen</string>
    <string name="how_to_scan_barcodes">How to scan barcodes</string>
    <string name="bar_scan">bar_scan</string>
    <string name="barcode_scanner_lets_you_use_your_phone_s_camera_to_recognize_barcodes_and_qr_codes">Barcode Scanner lets you use your phone\'s camera to recognize barcodes and QR codes.</string>
    <string name="make_sure_the_code_is_fully_within_the_detection_box_that_shows_in_your_camera_view">Make sure the code is fully within the detection box that shows in your camera view.</string>
    <string name="scan_barcode">scan_barcode</string>
    <string name="bulgary">Български</string>
    <string name="eesti">Eesti</string>
    <string name="čeština">Čeština</string>
    <string name="deutsch">Deutsch</string>
    <string name="english">English</string>
    <string name="lietuvi">Lietuvių</string>
    <string name="magyar">Magyar</string>
    <string name="polski">Polski</string>
    <string name="russian">Русский</string>
    <string name="slovenčina" translatable="true">Slovenčina</string>
    <string name="entry_java_title">Java</string>
    <string name="entry_java_subtitle">Run the MLKit Showcase written in Java.</string>
    <string name="entry_kotlin_title">Kotlin</string>
    <string name="entry_kotlin_subtitle">Run the MLKit Showcase written in Kotlin.</string>
    <string name="mode_odt_live_title">Object Detection: Live Camera</string>
    <string name="mode_odt_live_subtitle">A device’s live camera can be used to detect objects in an environment.</string>
    <string name="mode_odt_static_title">Object Detection: Static Image</string>
    <string name="mode_odt_static_subtitle">One or more objects can be detected from a provided image.</string>
    <string name="mode_barcode_live_title">Barcode Scanning</string>
    <string name="mode_barcode_live_subtitle">Read data encoded in most standard barcode formats.</string>
    <string name="custom_model_live_title">Object Detection: Live Camera with Custom Classification (Birds)</string>
    <string name="custom_model_live_subtitle">A device\'s live camera can be used to detect birds in an environment.</string>
    <string name="settings_title">MLKit Showcase Settings</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="cd_photo_library_button">Upload image</string>
    <string name="prompt_point_at_an_object">Point your camera at an object</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_point_at_a_bird">Point your camera at a bird</string>
    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="product_search_button">Search object</string>
    <plurals name="bottom_sheet_title">
        <item quantity="one">%d match found</item>
        <item quantity="other">%d matches found</item>
    </plurals>
    <string name="buttom_sheet_custom_model_title">Custom object found</string>
    <string name="static_image_prompt_detected_no_results">No results found</string>
    <string name="static_image_prompt_detected_results">Tap on a dot to inspect</string>
    <string name="static_image_card_no_result_title">No result found</string>
    <string name="static_image_card_no_result_subtitle">Support text place holder</string>
    <string name="static_image_preview_card_subtitle">+Few more results</string>
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_category_product_search">Product search</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_title_enable_auto_search">Enable auto search</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
    <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
    <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
    <string name="id_splash_screen">id_splash_screen</string>
    <string name="splash_screen">splash_screen</string>
    <string name="empty">empty</string>
    <string name="arrow_back_welcome_screen">arrow_back_welcome_screen</string>
    <string name="account_logo_welcome_screen">account_logo_welcome_screen</string>
    <string name="welcome_john_smile">Welcome, John Smile</string>
    <string name="asset_info_welcome_screen">asset_info_welcome_screen</string>
    <string name="inventory_logo_welcome_screen">inventory_logo_welcome_screen</string>
    <string name="import_logo_welcome_screen">import_logo_welcome_screen</string>
    <string name="import_text">Import</string>
    <string name="export_logo_welcome_screen">export_logo_welcome_screen</string>
    <string name="export">Export</string>
    <string name="settings_logo_welcome_screen">settings_logo_welcome_screen</string>
    <string name="asset_info_logo_v2">asset_info_logo_v2</string>
    <string name="welcome_pavol_orem">Welcome, Pavol Orem</string>
    <string name="asset_info">Asset info</string>
    <string name="inventory">Inventory</string>
    <string name="inventory_logo_v2">inventory_logo_v2</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="import_logo_v2">import_logo_v2</string>
    <string name="export_logo_v2">export_logo_v2</string>
    <string name="settings_logo_v2">settings_logo_v2</string>
    <string name="logout_logo_v2">logout_logo_v2</string>
    <string name="import_data">Import data</string>
    <string name="export_data">Export data</string>
    <string name="username_logo_login_screen">username_logo_login_screen</string>
    <string name="password_logo_login_screen">password_logo_login_screen</string>
    <string name="password">Password</string>
    <string name="content_description_search">search</string>
    <string name="search">search</string>
    <string name="home">home</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Inventory">Inventory</string>
    <string name="Export">Export</string>
    <string name="add_item_floating_buttom">add_item_floating_buttom</string>
    <string name="floating_button_layout">floating_button_layout</string>
    <string name="add_item">ADD ITEM</string>
    <string name="item">Item</string>
    <string name="sample_row_item">Sample Row Item</string>
    <string name="recycler_view_asset_info_screen">recycler_view_asset_info_screen</string>
    <string name="Import">Import</string>
    <string name="Asset">Asset</string>
    <string name="content_text_one">one</string>
    <string name="content_button">two</string>
    <string name="content_text_two">three</string>
    <string name="Barcode_scanning">Barcode scanning</string>
    <string name="asset_image">asset_image</string>
    <string name="Scan">Scan</string>
    <string name="Language">Language</string>
    <string name="change_default_language">change_default_language</string>
    <string name="Print">Print</string>
    <string name="Info">Info</string>
    <string name="RFID">RFID</string>
    <string name="importing_data">Importing data</string>
    <string name="importing_data_icon">importing_data_icon</string>
    <string name="exporting_data">Exporting data</string>
    <string name="import_progress_status">import_progress_status</string>
    <string name="exporting_data_icon">Exporting data</string>
    <string name="export_progress_status">export_progress_status</string>
    <string name="importing_data_view">importing_data_view</string>
    <string name="exporting_data_view">exporting_data_view</string>
    <string name="logical_classification">Logical classification</string>
    <string name="physical_classification">Physical classification</string>
    <string name="physical_classification_button">physical_classification_button</string>
    <string name="logical_classification_button">logical_classification_button</string>
    <string name="select_your_room">Select Your Room</string>
    <string name="select_your_department">Select Your Department</string>
    <string name="select_your_center">Select Your Center</string>
    <string name="start_inventory">Start Inventory</string>
    <string name="select_your_person">Select Your Person</string>
    <string name="select_your_logical_center">Select Your Logical Center</string>
    <string name="select_your_type_of_asset">Select Your Type Of Asset</string>
    <string name="select_your_additional_parameter">Select Your Additional Parameter</string>
</resources>