<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/import_progress_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/importing_data_frame"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:contentDescription="@string/importing_data_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/importing_data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/importing_data"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/importing_data_frame"
        app:layout_constraintStart_toStartOf="@+id/importing_data_frame"
        app:layout_constraintTop_toTopOf="@+id/importing_data_frame" />

    <ImageView
        android:id="@+id/importing_data_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/importing_data_icon"
        app:layout_constraintBottom_toTopOf="@+id/importing_data_progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/importing_data_frame"
        app:layout_constraintStart_toStartOf="@+id/importing_data_frame"
        app:layout_constraintTop_toBottomOf="@+id/importing_data_text"
        app:srcCompat="@drawable/importing_data" />

    <ProgressBar
        android:id="@+id/importing_data_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:max="100"
        android:progress="10"
        android:progressTint="@color/divein_color"
        app:layout_constraintBottom_toBottomOf="@+id/importing_data_frame"
        app:layout_constraintEnd_toEndOf="@+id/importing_data_frame"
        app:layout_constraintStart_toStartOf="@+id/importing_data_frame" />

</androidx.constraintlayout.widget.ConstraintLayout>