<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/physical_classification"
        android:layout_width="0dp"
        android:layout_height="320dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_optimizationLevel="ratio"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/select_your_room"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:typeface="sans" />

        <AutoCompleteTextView
            android:id="@+id/autocomplete_person_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_physical_classification"
            android:gravity="start"
            android:inputType="none"
            tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/person_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="end"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="10dp"
            android:enabled="true"
            android:gravity="center|end"
            app:endIconTint="@color/black">

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/logical_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:gravity="start"
            android:text="@string/select_your_department"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:typeface="sans"
            tools:ignore="RtlCompat,RtlHardcoded" />

        <AutoCompleteTextView
            android:id="@+id/autocomplete_logical_center_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_physical_classification"
            android:gravity="start"
            android:inputType="none"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/logical_center_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="end"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="10dp"
            android:gravity="center|end"
            app:endIconTint="@color/black"
            tools:ignore="MissingConstraints,RtlHardcoded">

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/type_of_asset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="190dp"
            android:gravity="start"
            android:text="@string/select_your_center"
            android:textColor="@color/black"
            android:typeface="sans"
            tools:ignore="RtlHardcoded" />

        <AutoCompleteTextView
            android:id="@+id/autocomplete_type_of_asset_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_physical_classification"
            android:gravity="start"
            android:inputType="none"
            tools:ignore="LabelFor,RtlHardcoded,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_of_asset_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="end"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            app:endIconTint="@color/black"
            tools:ignore="MissingConstraints,RtlHardcoded">

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/start_inventory_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/divein_color"
            android:gravity="bottom|center"
            android:text="@string/start_inventory"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:typeface="sans" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>